--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,175 @@
     color: #00ff80cc;
     line-height: 1;
   }
+  
+h2 {
+  font-size: 2.5em;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 2em;
+  color: #00ff80cc;
+}
+
+h4 {
+  font-size: 1.5em;
+  font-weight: 400;
+}
+
+p,
+nav a {
+  opacity: 0.8;
+}
+
+/* Container */
+
+.container-bg {
+  background-color: #101010;
+}
+
+.container {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+/* Title */
+
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 30px;
+  margin-bottom: 30px;
+  gap: 20px;
+}
+
+.title hr {
+  background-color: #00ff80cc;
+  height: 2px;
+  width: 90px;
+  border: none;
+}
+
+/* Header */
+
+header {
+  position: sticky;
+  top: 0;
+  background-color: black;
+  z-index: 10;
+}
+
+header a {
+  text-decoration: none;
+  color: white;
+}
+
+.header-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 30px;
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  align-items: center;
+  user-select: none;
+}
+
+nav a:hover {
+  opacity: 1;
+}
+
+#logo {
+  font-weight: 600;
+}
+
+#menu,
+#close {
+  display: none;
+  width: 20px;
+  cursor: pointer;
+}
+
+/* Hero */
+
+.hero-section {
+  background-color: black;
+}
+
+.hero-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 30px;
+  gap: 40px;
+  align-items: center;
+  min-height: calc(100dvh - 61px);
+}
+
+.hero-content-item {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: white;
+  align-items: start;
+}
+
+.hero-content-item p {
+  max-width: 600px;
+}
+
+.hero-content-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  max-width: 500px;
+  margin: 0 auto;
+  display: block;
+  border-radius: 10px;
+  box-shadow: 0 0 600px #00ff805e;
+  animation: float 4s ease-in-out infinite;
+}
+
+@keyframes float {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-20px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+
+/* Buttons */
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.btn {
+  display: inline-flex;
+  padding: 10px;
+  text-decoration: none;
+  font-weight: 600;
+  border-radius: 10px;
+  transition: 0.3s;
+}
