--- a/css/style.css
+++ b/css/style.css
@@ -210,3 +210,129 @@ nav a:hover {
   border-radius: 10px;
   transition: 0.3s;
 }
+
+.btn-primary {
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+}
+
+.btn-primary:hover {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
+.btn-secondary {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
+.btn-secondary:hover {
+  background-color: #00ff80;
+  color: black;
+  border: 1px solid #00ff80;
+}
+
+/* About */
+
+.about-me {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  width: 100%;
+}
+
+.about-me-text {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.about-me img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  aspect-ratio: 1 / 1;
+}
+
+/* Skills */
+
+.skills {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.skill {
+  background-color: #555;
+  padding: 20px;
+  background-color: #101010;
+  box-shadow: 0 0 10px #00ff8000;
+  transition: 0.5s;
+  cursor: default;
+  border-radius: 20px;
+}
+
+.skill:hover {
+  transform: scale(1.01);
+  box-shadow: 0 0 10px #00ff8091;
+  background-color: #0c0c0c;
+}
+
+.skill-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  gap: 30px;
+}
+
+/* Skill percentages */
+
+.percentage {
+  width: 100%;
+  height: 4px;
+  background-color: white;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.percentage-fill {
+  width: 0%;
+  height: 5px;
+  background-color: #00ff80;
+}
+
+/* Experiences */
+
+.experiences {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.experience {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  background-color: #000000;
+  padding: 20px;
+  border-radius: 20px;
+  transition: 0.5s;
+  cursor: default;
+}
+
+.experience:hover {
+  transform: scale(1.01);
+  box-shadow: 0 0 10px #00ff8091;
+  background-color: #0c0c0c;
+}
+
+/* Educations */
+
+.educations {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
