--- a/css/style.css
+++ b/css/style.css
@@ -423,3 +423,97 @@ input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
   box-shadow: inset 0 0 20px 20px #000000;
 }
+
+/* Footer */
+
+footer {
+  text-align: center;
+  padding: 30px;
+  color: white;
+}
+
+/* Media queries */
+
+@media only screen and (max-width: 992px) {
+  .about-me {
+    grid-template-columns: 1fr;
+  }
+
+  .skills {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  .header-content nav {
+    display: flex !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    font-size: 14px;
+  }
+
+  .hero-content {
+    grid-template-columns: 1fr;
+  }
+
+  nav {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: fixed;
+    background-color: #000000;
+    top: 0;
+    left: 0;
+    height: 100dvh;
+    width: 100%;
+  }
+
+  #menu,
+  #close {
+    display: block;
+    filter: brightness(0) saturate(100%) invert(99%) sepia(99%) saturate(0%)
+      hue-rotate(19deg) brightness(111%) contrast(101%);
+  }
+
+  #close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+  }
+
+  .hero-content-item img {
+    max-width: 100%;
+  }
+
+  .about-me img {
+    height: auto;
+  }
+
+  .skills {
+    grid-template-columns: 1fr;
+  }
+
+  .education {
+    grid-template-columns: 1fr;
+    text-align: center;
+    justify-items: center;
+  }
+
+  .education:hover {
+    transform: none;
+  }
+
+  .education hr {
+    height: 20px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 13px;
+  }
+}
